<resources>
    <string name="app_name">KNUpay.1.0</string>
    <string name="welcome_to_knupay">Welcome to Knupay</string>
    <string name="logo">logo</string>
    <string name="welcome_to_knupay1">Welcome to KNUpay</string>
    <string name="transaction_history">Transaction History</string>
    <string name="make_transfer">MAKE TRANSFER</string>
    <string name="back">Back</string>
    <string name="transaction_history2">transaction_history2</string>
    <string name="your_transaction_history">Your Transaction History</string>
    <string name="current_balance">CURRENT BALANCE</string>
    <string name="welcome">WELCOME</string>
    <string name="username">Full name</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="sign_up">Sign up</string>
    <string name="telephone">Mobile number</string>
    <string name="email">Email address</string>
    <string name="create">Create new account</string>
    <string name="transfer">Confirm</string>
    <string name="new_member">Do not have an account?</string>
    <string name="transfer_amount">Amount of the transfer</string>
</resources>
